--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
+    "antd": "^4.16.13",
     "axios": "^0.21.1",
     "date-fns": "^2.23.0",
     "node-sass": "^6.0.1",
