--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-dom": "^5.1.8",
     "antd": "^4.16.13",
     "axios": "^0.21.1",
+    "classnames": "^2.3.1",
     "date-fns": "^2.23.0",
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
