--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.23.0",
+    "i18next": "^21.6.11",
+    "i18next-browser-languagedetector": "^6.1.3",
+    "i18next-http-backend": "^1.3.2",
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.16.1",
+    "react-i18next": "^11.15.4",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
