--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^4.16.13",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "create-react-context": "^0.3.0",
     "date-fns": "^2.23.0",
     "i18next": "^21.6.11",
     "i18next-browser-languagedetector": "^6.1.3",
@@ -27,7 +28,7 @@
     "react-i18next": "^11.15.4",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
